fixed spacing

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -31,7 +31,7 @@ a:hover {
 
 .start {
 	position: relative;
-	top: 100px;
+	top: 60px;
 	/*color: black;*/
 }
 
@@ -117,7 +117,7 @@ a:hover {
 
 .clock-placeholder {
 	position: relative;
-	top: 25px;
+	top: 15px;
 }
 
 /* progress screen */
